--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     provided "org.projectlombok:lombok:1.12.6"
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.android.support:design:22.2.1'
 
 }
